--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/itc_db?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/itc_dsr_database?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = MySQL0123
 
@@ -24,6 +24,7 @@ spring.security.oauth2.client.registration.azure.client-secret=05xp-_mxQg1Rx6x0K
 
 # Specifies the list of Active Directory groups to use for authorization:
 azure.activedirectory.user-group.allowed-groups=users,manager
+
 
 
 
