--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,16 @@ server.port =8080
 # Specifies the list of Active Directory groups to use for authorization:
 #azure.activedirectory.user-group.allowed-groups=users,manager
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mamellomitane01@gmail.com
+spring.mail.password=Mamello#1
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
 
 
 
