latest version of application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/it_db?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/itc_online_dsr_database?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = MySQL0123
 
@@ -8,10 +8,11 @@ spring.datasource.password = MySQL0123
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto =none
+spring.jpa.hibernate.ddl-auto =update
 
 #Specifies the specific sever port number:
 server.port =8080
+
 
 # Specifies your Active Directory ID:
 #azure.activedirectory.tenant-id=fab11805-e13d-49a3-bc07-847725db7439
